deploy: 0844a1796f6d25e6bd086424c730ea116878162f

--- a/wj.htm
+++ b/wj.htm
@@ -4244,7 +4244,7 @@ relays in the three-way checkback:
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -4666,7 +4666,7 @@ relays in the three-way checkback:
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -5159,7 +5159,7 @@ relay structure generally lets the strong opener declare notrump.
         </tr>
        </table>
        <ul>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -5169,7 +5169,19 @@ relay structure generally lets the strong opener declare notrump.
             </span>
            </td>
            <td>
-            !(R)
+            !Default (R)
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2NT
+           </td>
+           <td>
+            Probably (4333)
            </td>
           </tr>
          </table>
@@ -5350,6 +5362,84 @@ relay structure generally lets the strong opener declare notrump.
     </li>
    </ul>
   </div>
+  <p>
+   Relay systems can be cryptic!  I am summing up why we arrange the steps in this
+way.
+  </p>
+  <ul>
+   <li>
+    <strong>
+     2
+     <span class="hcolor">
+      &hearts;
+     </span>
+    </strong>
+    : The lowest step layers
+    <strong>
+     strong hands.
+    </strong>
+    We can repeat the whole
+  structure inside.  This step follows the logic of (reverse) Lebensohl.
+   </li>
+   <li>
+    <strong>
+     2
+     <span class="scolor">
+      &spades;
+     </span>
+    </strong>
+    : The second step holds the possibility of a misfit,
+    <strong>
+     4 cards.
+    </strong>
+    We
+  need space to explore games in the other strains.
+   </li>
+   <li>
+    <strong>
+     2NT
+    </strong>
+    :
+    <strong>
+     Unbalanced fit!
+    </strong>
+    Opener never settles in 3NT.  Feel free to bid
+  notrump.
+   </li>
+   <li>
+    <strong>
+     3M
+    </strong>
+    :
+    <strong>
+     Balanced fit!
+    </strong>
+    Give opener a chance to declare 3NT with a flat hand.
+   </li>
+   <li>
+    <strong>
+     3m
+    </strong>
+    : Take some hands out of the nebulous 2
+    <span class="scolor">
+     &spades;
+    </span>
+    .  These hands suggests a
+    <strong>
+     minor suit
+    </strong>
+    slam.
+   </li>
+   <li>
+    <strong>
+     Others
+    </strong>
+    : These Splinter-level steps are made for
+    <strong>
+     big fits.
+    </strong>
+   </li>
+  </ul>
   <div class="tree">
    <ul>
     <li class="root">
@@ -5377,7 +5467,7 @@ relay structure generally lets the strong opener declare notrump.
           2NT
          </td>
          <td>
-          ! 4=M
+          4=M
          </td>
         </tr>
        </table>
@@ -5404,7 +5494,7 @@ relay structure generally lets the strong opener declare notrump.
               3M
              </td>
              <td>
-              ! 4+
+              !TRF, 4+
               <span class="ccolor">
                &clubs;
               </span>
@@ -5438,7 +5528,7 @@ relay structure generally lets the strong opener declare notrump.
           </span>
          </td>
          <td>
-          ! 4+
+          4+
           <span class="ccolor">
            &clubs;
           </span>
@@ -5457,7 +5547,7 @@ relay structure generally lets the strong opener declare notrump.
           </span>
          </td>
          <td>
-          ! 4+
+          4+
           <span class="dcolor">
            &diams;
           </span>
@@ -5473,7 +5563,7 @@ relay structure generally lets the strong opener declare notrump.
           3oM
          </td>
          <td>
-          ! 4+#, 5=M
+          4+#, 5=M
          </td>
         </tr>
        </table>
@@ -5485,7 +5575,7 @@ relay structure generally lets the strong opener declare notrump.
           3M
          </td>
          <td>
-          !BAL 5=M
+          !ART, BAL 5=M
          </td>
         </tr>
        </table>
@@ -5497,7 +5587,7 @@ relay structure generally lets the strong opener declare notrump.
           3NT
          </td>
          <td>
-          ! 6+M
+          !ART, 6+M
          </td>
         </tr>
        </table>
@@ -8497,7 +8587,7 @@ relays in the three-way checkback:
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -8919,7 +9009,7 @@ relays in the three-way checkback:
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -10634,7 +10724,7 @@ natural or conceals a fit in diamonds.
             2NT
            </td>
            <td>
-            !(R), ask for the better minor
+            !Ask for the better minor
            </td>
           </tr>
          </table>
@@ -13998,21 +14088,6 @@ problems like 1NT-2
         <tr>
          <td class="node" rowspan="1">
           2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          NF (R)
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
           <span class="scolor">
            &spades;
           </span>
@@ -14465,21 +14540,6 @@ problems like 1NT-2
       &hearts;
      </span>
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          NF (R)
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="node">
        <table>
         <tr>
@@ -15620,7 +15680,7 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -15712,7 +15772,7 @@ penalty since a takeout can usually penalize the other major.
           </li>
          </ul>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -15722,7 +15782,29 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF, 5+
+            !P/C, 5+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 4+
             <span class="ccolor">
              &clubs;
             </span>
@@ -15881,7 +15963,7 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -15966,7 +16048,7 @@ penalty since a takeout can usually penalize the other major.
           </li>
          </ul>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -15976,7 +16058,29 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF, 5+
+            !P/C, 5+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 4+
             <span class="ccolor">
              &clubs;
             </span>
@@ -16120,7 +16224,7 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -16186,7 +16290,7 @@ penalty since a takeout can usually penalize the other major.
           </li>
          </ul>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -16196,7 +16300,29 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF, 5+
+            !P/C, 5+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 4+
             <span class="ccolor">
              &clubs;
             </span>
@@ -17542,7 +17668,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           4NT
          </td>
          <td>
-          RKCB 0314
+          !RKCB 0314
          </td>
         </tr>
        </table>
@@ -17613,7 +17739,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           4M
          </td>
          <td>
-          P/C
+          !P/C
          </td>
         </tr>
        </table>
@@ -17625,7 +17751,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           5M
          </td>
          <td>
-          P/C
+          !P/C
          </td>
         </tr>
        </table>
@@ -17637,7 +17763,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           6M
          </td>
          <td>
-          P/C
+          !P/C
          </td>
         </tr>
        </table>
