--- a/blue.htm
+++ b/blue.htm
@@ -8399,21 +8399,6 @@ problems like 1NT-2
         <tr>
          <td class="node" rowspan="1">
           2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          NF (R)
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
           <span class="scolor">
            &spades;
           </span>
@@ -8866,21 +8851,6 @@ problems like 1NT-2
       &hearts;
      </span>
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          NF (R)
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="node">
        <table>
         <tr>
@@ -10021,7 +9991,7 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -10113,7 +10083,7 @@ penalty since a takeout can usually penalize the other major.
           </li>
          </ul>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -10123,7 +10093,29 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF, 5+
+            !P/C, 5+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 4+
             <span class="ccolor">
              &clubs;
             </span>
@@ -10282,7 +10274,7 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -10367,7 +10359,7 @@ penalty since a takeout can usually penalize the other major.
           </li>
          </ul>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -10377,7 +10369,29 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF, 5+
+            !P/C, 5+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 4+
             <span class="ccolor">
              &clubs;
             </span>
@@ -10521,7 +10535,7 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF (R)
+            !P/C
            </td>
           </tr>
          </table>
@@ -10587,7 +10601,7 @@ penalty since a takeout can usually penalize the other major.
           </li>
          </ul>
         </li>
-        <li class="last node">
+        <li class="node">
          <table>
           <tr>
            <td class="node" rowspan="1">
@@ -10597,7 +10611,29 @@ penalty since a takeout can usually penalize the other major.
             </span>
            </td>
            <td>
-            !NF, 5+
+            !P/C, 5+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 4+
             <span class="ccolor">
              &clubs;
             </span>
@@ -12088,7 +12124,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           4NT
          </td>
          <td>
-          RKCB 0314
+          !RKCB 0314
          </td>
         </tr>
        </table>
@@ -12159,7 +12195,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           4M
          </td>
          <td>
-          P/C
+          !P/C
          </td>
         </tr>
        </table>
@@ -12171,7 +12207,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           5M
          </td>
          <td>
-          P/C
+          !P/C
          </td>
         </tr>
        </table>
@@ -12183,7 +12219,7 @@ conveys approximately 0.58 more bits than traditional or Meckwell Namyats.
           6M
          </td>
          <td>
-          P/C
+          !P/C
          </td>
         </tr>
        </table>
