--- a/defense.htm
+++ b/defense.htm
@@ -1880,47 +1880,47 @@ of games with 3 hearts.
            </td>
           </tr>
          </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="dcolor">
-             &diams;
-            </span>
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            S/O
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-           <td>
-            !SPL, 0&ndash;1
-            <span class="scolor">
-             &spades;
-            </span>
-            , 0&ndash;3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-          </tr>
-         </table>
          <ul>
+          <li class="node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              3
+              <span class="dcolor">
+               &diams;
+              </span>
+              <span class="hcolor">
+               &hearts;
+              </span>
+             </td>
+             <td>
+              S/O
+             </td>
+            </tr>
+           </table>
+          </li>
+          <li class="node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              3
+              <span class="scolor">
+               &spades;
+              </span>
+             </td>
+             <td>
+              !SPL, 0&ndash;1
+              <span class="scolor">
+               &spades;
+              </span>
+              , 0&ndash;3
+              <span class="hcolor">
+               &hearts;
+              </span>
+             </td>
+            </tr>
+           </table>
+          </li>
           <li class="last node">
            <table>
             <tr>
@@ -1937,6 +1937,46 @@ of games with 3 hearts.
            </table>
           </li>
          </ul>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !P/C, 5+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !P/C, MAX, 4+
+            <span class="dcolor">
+             &diams;
+            </span>
+            , 4+
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+          </tr>
+         </table>
         </li>
        </ul>
       </li>
@@ -3472,7 +3512,7 @@ contract more often than not.
             </span>
            </td>
            <td>
-            !NF MIN (R)
+            !MIN P/C
            </td>
           </tr>
          </table>
