deploy: e596448ac64cd4dae00f32df8ac29e0a8518a08c

--- a/wj.htm
+++ b/wj.htm
@@ -6553,7 +6553,57 @@ double&rdquo; by accepting the transfer.
      <span class="ccolor">
       &clubs;
      </span>
-     -(1X)
+     -(1
+     <span class="scolor">
+      &spades;
+     </span>
+     )
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Dbl
+         </td>
+         <td>
+          !NEG, 7+ HCP, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          NF, 7&ndash;11 HCP, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="ccolor">
+      &clubs;
+     </span>
+     -(1Y)
      <ul>
       <li class="node">
        <table>
@@ -6640,69 +6690,55 @@ double&rdquo; by accepting the transfer.
         <tr>
          <td class="node" rowspan="1">
           2
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          F INV+, 10+ HCP, 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          F INV+, 10+ HCP, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          PRE, 3&ndash;8 HCP, 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
           <span class="scolor">
            &spades;
           </span>
          </td>
          <td>
-          PRE, 3&ndash;8 HCP, 6+
-          <span class="scolor">
-           &spades;
+          !TRF, PRE 7+
+          <span class="ccolor">
+           &clubs;
           </span>
+          or FG 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2X
+         </td>
+         <td>
+          F INV+, 10+ HCP, 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Y
+         </td>
+         <td>
+          !TRF, PRE or INV+, 6+ next suit
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Z
+         </td>
+         <td>
+          !TRF, PRE or INV+, 6+ next suit
          </td>
         </tr>
        </table>
@@ -6714,7 +6750,7 @@ double&rdquo; by accepting the transfer.
           2NT
          </td>
          <td>
-          !BAL FG with stopper
+          !FG with stopper
          </td>
         </tr>
        </table>
@@ -6829,7 +6865,7 @@ double&rdquo; by accepting the transfer.
      </span>
      )
      <ul>
-      <li class="node">
+      <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -6863,28 +6899,6 @@ double&rdquo; by accepting the transfer.
          </table>
         </li>
        </ul>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !TRF, PRE 7+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          or FG 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
       </li>
      </ul>
     </li>
@@ -6903,7 +6917,7 @@ double&rdquo; by accepting the transfer.
      </span>
      )
      <ul>
-      <li class="node">
+      <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -6937,100 +6951,6 @@ double&rdquo; by accepting the transfer.
          </table>
         </li>
        </ul>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !TRF, PRE 7+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          or FG 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -(1
-     <span class="scolor">
-      &spades;
-     </span>
-     )
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          Dbl
-         </td>
-         <td>
-          !NEG, 7+ HCP, 4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          NF, 7&ndash;11 HCP, 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !TRF, PRE 7+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          or FG 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
       </li>
      </ul>
     </li>
