--- a/wj.htm
+++ b/wj.htm
@@ -10896,6 +10896,93 @@ natural or conceals a fit in diamonds.
     </li>
    </ul>
   </div>
+  <p>
+   We play Untwisted 2/1 over 1
+   <span class="scolor">
+    &spades;
+   </span>
+   .  The 2/1 bids are either natural or contain
+long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
+(TpKotoba).  I untwist the 2/1 bids but keep weak hearts in 2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   .
+  </p>
+  <p>
+   https://hackmd.io/@TpKotoba/refx
+  </p>
+  <p>
+   We restrict the heart variant in 1
+   <span class="scolor">
+    &spades;
+   </span>
+   -1NT to mild inviation, i.e. 9&ndash;11 HCP, 
+5=
+   <span class="hcolor">
+    &hearts;
+   </span>
+   , 0&ndash;2
+   <span class="scolor">
+    &spades;
+   </span>
+   .  With either a spade fit or an extra heart, upgrade it to a 
+strong invitation.  The following list shows how we
+   <strong>
+    respond to 1
+    <span class="scolor">
+     &spades;
+    </span>
+    with 5+
+hearts.
+   </strong>
+  </p>
+  <ul>
+   <li>
+    <strong>
+     Game force (or invitation by PH):
+    </strong>
+    2
+    <span class="hcolor">
+     &hearts;
+    </span>
+   </li>
+   <li>
+    <strong>
+     Strong invitation:
+    </strong>
+    2
+    <span class="ccolor">
+     &clubs;
+    </span>
+    , 6+ hearts or 3= spades
+   </li>
+   <li>
+    <strong>
+     Mild invitation:
+    </strong>
+    1NT
+   </li>
+   <li>
+    <strong>
+     Constructive:
+    </strong>
+    2
+    <span class="ccolor">
+     &clubs;
+    </span>
+   </li>
+   <li>
+    <strong>
+     Weak:
+    </strong>
+    Consider 2
+    <span class="ccolor">
+     &clubs;
+    </span>
+    if 6+ hearts.  Pass otherwise.
+   </li>
+  </ul>
   <div class="tree">
    <ul>
     <li class="root">
@@ -10915,7 +11002,7 @@ natural or conceals a fit in diamonds.
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;4
+          , 0&ndash;5
           <span class="hcolor">
            &hearts;
           </span>
@@ -10951,9 +11038,9 @@ natural or conceals a fit in diamonds.
           </span>
          </td>
          <td>
-          !FG, NAT or 5+
-          <span class="hcolor">
-           &hearts;
+          !FG, 4+
+          <span class="dcolor">
+           &diams;
           </span>
          </td>
         </tr>
@@ -10969,7 +11056,7 @@ natural or conceals a fit in diamonds.
           </span>
          </td>
          <td>
-          !NF INV, 5+
+          !FG, 5+
           <span class="hcolor">
            &hearts;
           </span>
@@ -11143,22 +11230,162 @@ natural or conceals a fit in diamonds.
     </li>
    </ul>
   </div>
-  <p>
-   We play Untwisted 2/1 over 1
-   <span class="scolor">
-    &spades;
-   </span>
-   .  The 2/1 bids are either natural or contain
-long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
-(TpKotoba).  I untwist the 2/1 bids but keep weak hearts in 2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   .
-  </p>
-  <p>
-   https://hackmd.io/@TpKotoba/refx
-  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="scolor">
+      &spades;
+     </span>
+     -1NT
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          NF, usually 3+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          NF, 4+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          NF, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MIN, 6+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+       <ul>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            INV, 25(xx)
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          BAL INV, 15&ndash;16 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          MAX, 6+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          MAX, 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          BAL, 17 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
   <div class="tree">
    <ul>
     <li class="root">
@@ -11181,14 +11408,11 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          !(R), 0&ndash;2
+          !(R), 0&ndash;1
           <span class="hcolor">
            &hearts;
           </span>
-          or 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
+          or MAX
          </td>
         </tr>
        </table>
@@ -11210,6 +11434,30 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            INV, 3=
+            <span class="scolor">
+             &spades;
+            </span>
+            , 5+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -11224,6 +11472,10 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           MIN, 6+
           <span class="scolor">
            &spades;
+          </span>
+          , 0&ndash;2
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -11254,14 +11506,10 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          MAX, 4+
+          MAX, 5+
           <span class="ccolor">
            &clubs;
           </span>
-          , 3=
-          <span class="hcolor">
-           &hearts;
-          </span>
          </td>
         </tr>
        </table>
@@ -11276,13 +11524,9 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          MAX, 4+
+          MAX, 5+
           <span class="dcolor">
            &diams;
-          </span>
-          , 3=
-          <span class="hcolor">
-           &hearts;
           </span>
          </td>
         </tr>
@@ -11298,7 +11542,7 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          MIN, 4=
+          P/C MIN, 4=
           <span class="hcolor">
            &hearts;
           </span>
@@ -11335,173 +11579,10 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           3NT
          </td>
          <td>
-          MAX, 4=
+          !P/C MIN, 5+
           <span class="hcolor">
            &hearts;
           </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1
-     <span class="scolor">
-      &spades;
-     </span>
-     -2
-     <span class="dcolor">
-      &diams;
-     </span>
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          MIN, 4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          MIN, 0&ndash;3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !MAX, 3=
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          MAX, 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 0&ndash;2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          MAX, 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 0&ndash;2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          MAX, 4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          MAX, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-          , 0&ndash;2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          MAX, 5233
          </td>
         </tr>
        </table>
