deploy: 69112800fe43b5cd8c583c6f5bd6d488efd77c21

--- a/wj.htm
+++ b/wj.htm
@@ -10608,6 +10608,27 @@ natural or conceals a fit in diamonds.
   <h1>
    Major suit openings
   </h1>
+  <p>
+   Only to 1
+   <span class="scolor">
+    &spades;
+   </span>
+   do we have forcing 1NT.  Unlike 1
+   <span class="hcolor">
+    &hearts;
+   </span>
+   -1NT, there are still reasonable
+chances of a major suit game (especially 4
+   <span class="hcolor">
+    &hearts;
+   </span>
+   ) after 1
+   <span class="scolor">
+    &spades;
+   </span>
+   -1NT and a balanced
+minimum opener.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -10642,10 +10663,13 @@ natural or conceals a fit in diamonds.
          </td>
          <td>
           NF, usually 7&ndash;11 HCP, 0&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+          , 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
-          ,
          </td>
         </tr>
        </table>
@@ -10910,37 +10934,16 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
    .
   </p>
   <p>
-   https://hackmd.io/@TpKotoba/refx
-  </p>
-  <p>
-   We restrict the heart variant in 1
+   Responding to 1
    <span class="scolor">
     &spades;
    </span>
-   -1NT to mild inviation, i.e. 9&ndash;11 HCP, 
-5=
-   <span class="hcolor">
-    &hearts;
-   </span>
-   , 0&ndash;2
-   <span class="scolor">
-    &spades;
-   </span>
-   .  With either a spade fit or an extra heart, upgrade it to a 
-strong invitation.  The following list shows how we
-   <strong>
-    respond to 1
-    <span class="scolor">
-     &spades;
-    </span>
-    with 5+
-hearts.
-   </strong>
+   with 5+ hearts, we bid according to strength:
   </p>
   <ul>
    <li>
     <strong>
-     Game force (or invitation by PH):
+     Game-forcing:
     </strong>
     2
     <span class="hcolor">
@@ -10949,38 +10952,18 @@ hearts.
    </li>
    <li>
     <strong>
-     Strong invitation:
-    </strong>
-    2
-    <span class="ccolor">
-     &clubs;
-    </span>
-    , 6+ hearts or 3= spades
-   </li>
-   <li>
-    <strong>
-     Mild invitation:
+     Invitational:
     </strong>
     1NT
    </li>
    <li>
     <strong>
-     Constructive:
+     Weak:
     </strong>
     2
     <span class="ccolor">
      &clubs;
     </span>
-   </li>
-   <li>
-    <strong>
-     Weak:
-    </strong>
-    Consider 2
-    <span class="ccolor">
-     &clubs;
-    </span>
-    if 6+ hearts.  Pass otherwise.
    </li>
   </ul>
   <div class="tree">
@@ -10998,13 +10981,9 @@ hearts.
           1NT
          </td>
          <td>
-          NF, usually 7&ndash;11 HCP, 0&ndash;3
+          F, usually 7&ndash;11 HCP, 0&ndash;3
           <span class="scolor">
            &spades;
-          </span>
-          , 0&ndash;5
-          <span class="hcolor">
-           &hearts;
           </span>
          </td>
         </tr>
@@ -11249,10 +11228,11 @@ hearts.
           </span>
          </td>
          <td>
-          NF, usually 3+
+          NF, 4+
           <span class="ccolor">
            &clubs;
           </span>
+          or BAL MIN
          </td>
         </tr>
        </table>
@@ -11310,23 +11290,6 @@ hearts.
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3
-            <span class="hcolor">
-             &hearts;
-            </span>
-           </td>
-           <td>
-            INV, 25(xx)
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
@@ -11335,7 +11298,7 @@ hearts.
           2NT
          </td>
          <td>
-          BAL INV, 15&ndash;16 HCP
+          BAL MAX
          </td>
         </tr>
        </table>
@@ -11358,7 +11321,7 @@ hearts.
         </tr>
        </table>
       </li>
-      <li class="node">
+      <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -11366,18 +11329,6 @@ hearts.
          </td>
          <td>
           MAX, 5+#
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3NT
-         </td>
-         <td>
-          BAL, 17 HCP
          </td>
         </tr>
        </table>
@@ -11736,6 +11687,39 @@ use reverse Bergen raises for hearts for several reasons:
    We don't play Drury here.  For a 3-card limit raise without a 5-card side suit,
 1NT is decent.
   </p>
+  <p>
+   The heart ladder over 1
+   <span class="scolor">
+    &spades;
+   </span>
+   also steps down half a trick:
+  </p>
+  <ul>
+   <li>
+    <strong>
+     Invitational:
+    </strong>
+    2
+    <span class="hcolor">
+     &hearts;
+    </span>
+   </li>
+   <li>
+    <strong>
+     Constructive:
+    </strong>
+    1NT
+   </li>
+   <li>
+    <strong>
+     Weak:
+    </strong>
+    2
+    <span class="ccolor">
+     &clubs;
+    </span>
+   </li>
+  </ul>
   <div class="tree">
    <ul>
     <li class="root">
@@ -11792,6 +11776,21 @@ use reverse Bergen raises for hearts for several reasons:
       &spades;
      </span>
      <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          1NT
+         </td>
+         <td>
+          NF, usually 7&ndash;11 HCP, 0&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
       <li class="node">
        <table>
         <tr>
