--- a/blue.htm
+++ b/blue.htm
@@ -5897,6 +5897,21 @@ compete.
     </li>
    </ul>
   </div>
+  <p>
+   We respond to 1
+   <span class="scolor">
+    &spades;
+   </span>
+   with Twisted 2/1 by Ting-Yu Ye (TpKotoba).  I simplify 2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   to
+contain 5+ hearts always.  This method is similar to Kaplan Interchange.
+  </p>
+  <p>
+   https://hackmd.io/@TpKotoba/refx
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -5916,7 +5931,7 @@ compete.
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;4
+          , 0&ndash;5
           <span class="hcolor">
            &hearts;
           </span>
@@ -5934,9 +5949,27 @@ compete.
           </span>
          </td>
          <td>
-          !NAT FG, NF 5+
+          !TRF, 5+
           <span class="hcolor">
            &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !FG 4+
+          <span class="ccolor">
+           &clubs;
           </span>
           , CONST 4=
           <span class="scolor">
@@ -5955,32 +5988,14 @@ compete.
         <tr>
          <td class="node" rowspan="1">
           2
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !FG 4+
           <span class="dcolor">
            &diams;
-          </span>
-         </td>
-         <td>
-          !FG, NAT or 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !NF INV, 5+
-          <span class="hcolor">
-           &hearts;
           </span>
          </td>
         </tr>
@@ -6161,20 +6176,16 @@ compete.
    </ul>
   </div>
   <p>
-   We play Untwisted 2/1 over 1
+   Since 1
    <span class="scolor">
     &spades;
    </span>
-   .  The 2/1 bids are either natural or contain
-long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
-(TpKotoba).  I untwist the 2/1 bids but keep weak hearts in 2
+   -2
    <span class="ccolor">
     &clubs;
    </span>
-   .
-  </p>
-  <p>
-   https://hackmd.io/@TpKotoba/refx
+   generally asks for 2+ hearts to sign off, I advise responding 1NT
+with an invitation with 5= hearts and 0&ndash;2 spades to query minimum 3+ hearts.
   </p>
   <div class="tree">
    <ul>
@@ -6198,14 +6209,11 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          !(R), 0&ndash;2
+          !(R), 0&ndash;1
           <span class="hcolor">
            &hearts;
           </span>
-          or 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
+          or MAX
          </td>
         </tr>
        </table>
@@ -6242,6 +6250,10 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           <span class="scolor">
            &spades;
           </span>
+          , 0&ndash;2
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
@@ -6275,10 +6287,6 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           <span class="ccolor">
            &clubs;
           </span>
-          , 3=
-          <span class="hcolor">
-           &hearts;
-          </span>
          </td>
         </tr>
        </table>
@@ -6296,10 +6304,6 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           MAX canap&eacute;, 5+
           <span class="dcolor">
            &diams;
-          </span>
-          , 3=
-          <span class="hcolor">
-           &hearts;
           </span>
          </td>
         </tr>
@@ -6337,7 +6341,7 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          MAX, 6+
+          !MAX, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -6349,16 +6353,63 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
           3NT
          </td>
          <td>
-          MAX canap&eacute;, 5+
+          !MAX, 6+
+          <span class="scolor">
+           &spades;
+          </span>
+          , 2=
           <span class="hcolor">
            &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="ccolor">
+           &clubs;
+          </span>
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !SPL, 0&ndash;1#, 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          MIN, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 5+
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
@@ -6368,6 +6419,10 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
     </li>
    </ul>
   </div>
+  <p>
+   I simplify rebids to a minor suit game force.  Rebidding 2NT shows a minimum
+with hearts.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -6390,9 +6445,9 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          !MIN, 0&ndash;3
-          <span class="hcolor">
-           &hearts;
+          !MIN, 4=
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
@@ -6408,110 +6463,11 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
           </span>
          </td>
          <td>
-          !MIN, 4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 5+
+          !MIN, 5+
           <span class="scolor">
            &spades;
           </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !MAX, 3=
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          MAX, 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          , 0&ndash;2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          MAX canap&eacute;, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 0&ndash;2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          MAX canap&eacute;, 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          MAX, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-          , 0&ndash;2
+          , 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -6523,10 +6479,70 @@ long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
+          2NT
          </td>
          <td>
-          MAX, 5233
+          !MIN, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+          , 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     1
+     <span class="scolor">
+      &spades;
+     </span>
+     -2
+     <span class="hcolor">
+      &hearts;
+     </span>
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !MIN, 0&ndash;3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !MIN, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+          , 4+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
