deploy: 525a742f69112c8fd21d0d840f56249e02da5a96

--- a/blue.htm
+++ b/blue.htm
@@ -9940,7 +9940,7 @@ penalty since a takeout can usually penalize the other major.
    )
   </h3>
   <p>
-   We play Transfer Lebensohl against overcalls 2
+   We play BTU Transfer Lebensohl against overcalls 2
    <span class="dcolor">
     &diams;
    </span>
@@ -9950,7 +9950,16 @@ penalty since a takeout can usually penalize the other major.
    <span class="scolor">
     &spades;
    </span>
-   .
+   (link lost).
+Specially against 2
+   <span class="scolor">
+    &spades;
+   </span>
+   , we use Larry Cohen's version to avoid declaring hearts
+via Stayman.
+  </p>
+  <p>
+   https://www.larryco.com/bridge-articles/transfer-lebensohl
   </p>
   <div class="tree">
    <ul>
@@ -10202,9 +10211,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG, usually short
-          <span class="dcolor">
-           &diams;
+          !FG, usually 6+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -10427,7 +10436,7 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !TRF, 5+
+          !TRF, INV+, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -10481,9 +10490,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG, usually short
-          <span class="hcolor">
-           &hearts;
+          !FG, usually 6+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -10705,9 +10714,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG STAY, 4+
-          <span class="hcolor">
-           &hearts;
+          !FG, usually 6+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -10723,9 +10732,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG, usually short
-          <span class="scolor">
-           &spades;
+          !FG STAY, 4+
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -10800,8 +10809,8 @@ not yet shown a suit.
          </td>
          <td>
           INV+, 5+
-          <span class="hcolor">
-           &hearts;
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
@@ -10818,8 +10827,8 @@ not yet shown a suit.
          </td>
          <td>
           INV+, 5+
-          <span class="scolor">
-           &spades;
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
