--- a/wj.htm
+++ b/wj.htm
@@ -15413,7 +15413,7 @@ penalty since a takeout can usually penalize the other major.
    )
   </h3>
   <p>
-   We play Transfer Lebensohl against overcalls 2
+   We play BTU Transfer Lebensohl against overcalls 2
    <span class="dcolor">
     &diams;
    </span>
@@ -15423,7 +15423,16 @@ penalty since a takeout can usually penalize the other major.
    <span class="scolor">
     &spades;
    </span>
-   .
+   (link lost).
+Specially against 2
+   <span class="scolor">
+    &spades;
+   </span>
+   , we use Larry Cohen's version to avoid declaring hearts
+via Stayman.
+  </p>
+  <p>
+   https://www.larryco.com/bridge-articles/transfer-lebensohl
   </p>
   <div class="tree">
    <ul>
@@ -15675,9 +15684,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG, usually short
-          <span class="dcolor">
-           &diams;
+          !FG, usually 6+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -15900,7 +15909,7 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !TRF, 5+
+          !TRF, INV+, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -15954,9 +15963,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG, usually short
-          <span class="hcolor">
-           &hearts;
+          !FG, usually 6+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -16178,9 +16187,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG STAY, 4+
-          <span class="hcolor">
-           &hearts;
+          !FG, usually 6+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -16196,9 +16205,9 @@ penalty since a takeout can usually penalize the other major.
           </span>
          </td>
          <td>
-          !FG, usually short
-          <span class="scolor">
-           &spades;
+          !FG STAY, 4+
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
@@ -16273,8 +16282,8 @@ not yet shown a suit.
          </td>
          <td>
           INV+, 5+
-          <span class="hcolor">
-           &hearts;
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
@@ -16291,8 +16300,8 @@ not yet shown a suit.
          </td>
          <td>
           INV+, 5+
-          <span class="scolor">
-           &spades;
+          <span class="hcolor">
+           &hearts;
           </span>
          </td>
         </tr>
