deploy: 1c837190331da258e610c921048c6155f7ce18c0

--- a/blue.htm
+++ b/blue.htm
@@ -5,7 +5,7 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   Mijumaru Blue Club
+   Blueberry Club
   </title>
   <style type="text/css">
    div.start {
@@ -96,10 +96,10 @@ div.tree li.root {
  </head>
  <body>
   <h1>
-   Mijumaru Blue Club
+   Blueberry Club
   </h1>
   <p>
-   Welcome to Mijumaru Blue Club!  This bidding system is largely based on Blue
+   Welcome to Blueberry Club!  This bidding system is largely based on Blue
 Club.  Changes are made with my improvisation.
   </p>
   <h2>
