--- a/wj.htm
+++ b/wj.htm
@@ -5,7 +5,7 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   Litten Polish Club
+   Strawberry Polish Club
   </title>
   <style type="text/css">
    div.start {
@@ -96,10 +96,10 @@ div.tree li.root {
  </head>
  <body>
   <h1>
-   Litten Polish Club
+   Strawberry Polish Club
   </h1>
   <p>
-   Welcome to Litten Polish Club!  Polish Club is a 5-card major small club
+   Welcome to Strawberry Polish Club!  Polish Club is a 5-card major small club
 bidding system, where the 1
    <span class="ccolor">
     &clubs;
