deploy: 05ecd5535376877b7a747bbcc568a1c88bd3a4fa

--- a/wj.htm
+++ b/wj.htm
@@ -10883,13 +10883,17 @@ minimum opener.
    </ul>
   </div>
   <p>
-   We play Untwisted 2/1 over 1
+   I suggest playing Untwisted 2/1 over 1
    <span class="scolor">
     &spades;
    </span>
-   .  The 2/1 bids are either natural or contain
-long hearts instead.  This treatment is inspired by Twisted 2/1 by Ting-Yu Ye
-(TpKotoba).  I untwist the 2/1 bids but keep weak hearts in 2
+   .  The 2
+   <span class="ccolor">
+    &clubs;
+   </span>
+   response is either natural
+or contains long hearts.  This treatment is inspired by Twisted 2/1 by Ting-Yu
+Ye (TpKotoba).  I untwist the 2/1 bids but keep weak hearts in 2
    <span class="ccolor">
     &clubs;
    </span>
