--- a/wj.htm
+++ b/wj.htm
@@ -10571,26 +10571,76 @@ natural or conceals a fit in diamonds.
    Major suit openings
   </h1>
   <p>
-   Only to 1
-   <span class="scolor">
-    &spades;
-   </span>
-   do we have forcing 1NT.  Unlike 1
+   Most 5-card major bidding systems have highly similar structures to 1
    <span class="hcolor">
     &hearts;
    </span>
-   -1NT, there are still reasonable
-chances of a major suit game (especially 4
-   <span class="hcolor">
-    &hearts;
-   </span>
-   ) after 1
+   and 1
    <span class="scolor">
     &spades;
    </span>
-   -1NT and a balanced
-minimum opener.
+   .
+However, there are notable differences between the major suits.
   </p>
+  <ol>
+   <li>
+    1
+    <span class="hcolor">
+     &hearts;
+    </span>
+    -1NT does not conceal a major fit.  1
+    <span class="scolor">
+     &spades;
+    </span>
+    -1NT may conceal a heart fit.
+   </li>
+   <li>
+    1
+    <span class="hcolor">
+     &hearts;
+    </span>
+    -2
+    <span class="hcolor">
+     &hearts;
+    </span>
+    does not preempt 2
+    <span class="scolor">
+     &spades;
+    </span>
+    .  1
+    <span class="scolor">
+     &spades;
+    </span>
+    -2
+    <span class="scolor">
+     &spades;
+    </span>
+    preempts 2
+    <span class="hcolor">
+     &hearts;
+    </span>
+    .
+   </li>
+  </ol>
+  <p>
+   My suggested continuations reflect these differences:
+  </p>
+  <ol>
+   <li>
+    Only unpassed 1
+    <span class="scolor">
+     &spades;
+    </span>
+    -1NT is forcing.  Any 1
+    <span class="hcolor">
+     &hearts;
+    </span>
+    -1NT is non/semi-forcing.
+   </li>
+   <li>
+    Bergen raises are for hearts, Monolo raises for spades.
+   </li>
+  </ol>
   <div class="tree">
    <ul>
     <li class="root">
@@ -10932,6 +10982,24 @@ Ye (TpKotoba).  I untwist the 2/1 bids but keep weak hearts in 2
     </span>
    </li>
   </ul>
+  <p>
+   Monolo was a bidding system developed by Fei Chen (Doizi).  Monolo raises pack
+mini-Splinters in 3
+   <span class="ccolor">
+    &clubs;
+   </span>
+   <span class="dcolor">
+    &diams;
+   </span>
+   , leaving mixed+ raises in 3
+   <span class="hcolor">
+    &hearts;
+   </span>
+   <span class="scolor">
+    &spades;
+   </span>
+   .
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
