deploy: 9789ae5622bf2b464d27e1e5709f8fe93590a80f

--- a/blue.htm
+++ b/blue.htm
@@ -11566,7 +11566,7 @@ unbid (minor) suits.
           Dbl
          </td>
          <td>
-          !OPT, 12+ HCP and 5+M or 18+ HCP
+          !OPT, 12+ HCP and 5+M or BAL 19+ HCP
          </td>
         </tr>
        </table>
@@ -11708,6 +11708,178 @@ unbid (minor) suits.
     </li>
    </ul>
   </div>
+  <p>
+   We often pass 2
+   <span class="dcolor">
+    &diams;
+   </span>
+   x with balanced hands to ease slam exploration, especially
+for minor suit slams.
+  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (2
+     <span class="dcolor">
+      &diams;
+     </span>
+     )-Dbl
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2M
+         </td>
+         <td>
+          !P/C
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !INV+ (R)
+         </td>
+        </tr>
+       </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !MAX, 5+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !MAX, 5+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3M
+           </td>
+           <td>
+            MIN, 5+#
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3NT
+           </td>
+           <td>
+            BAL, 19+ HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          To play, usually 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !Ask for stopper, usually 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3M
+         </td>
+         <td>
+          !P/C
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          To play, usually long clubs with a short diamond stopper
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <p>
+   When RHO bids, X is penalty and usually short in the other major.  Please
+refrain from penalizing with length in both major suits.  It is usually better
+to make our own game than setting their doubled partscore.
+  </p>
   <h1>
    Muiderberg 2M
   </h1>
