deploy: 6ca71c3b915f87016ce943a2a12430984d461873

--- a/wj.htm
+++ b/wj.htm
@@ -17427,13 +17427,27 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !MAX, 5+
-            <span class="hcolor">
-             &hearts;
-            </span>
+            !BAL, 19+ HCP
            </td>
           </tr>
          </table>
+         <ul>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              3
+              <span class="dcolor">
+               &diams;
+              </span>
+             </td>
+             <td>
+              !STAY
+             </td>
+            </tr>
+           </table>
+          </li>
+         </ul>
         </li>
         <li class="node">
          <table>
@@ -17445,22 +17459,7 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !MAX, 5+
-            <span class="scolor">
-             &spades;
-            </span>
-           </td>
-          </tr>
-         </table>
-        </li>
-        <li class="node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            3M
-           </td>
-           <td>
-            MIN, 5+#
+            !MIN
            </td>
           </tr>
          </table>
@@ -17469,10 +17468,10 @@ for minor suit slams.
          <table>
           <tr>
            <td class="node" rowspan="1">
-            3NT
+            3M
            </td>
            <td>
-            BAL, 19+ HCP
+            !MAX, 5+#
            </td>
           </tr>
          </table>
@@ -17546,7 +17545,7 @@ for minor suit slams.
   <p>
    When RHO bids, X is penalty and usually short in the other major.  Please
 refrain from penalizing with length in both major suits.  It is usually better
-to make our own game than setting their doubled partscore.
+to make our own contract than setting their doubled partscore.
   </p>
   <h1>
    Muiderberg 2M
